# niconico_watcher_rust

./: .env-template  .gitignore  Cargo.toml  LICENSE  README.md  Xargo.toml  bot_config-template.toml  config-template.toml
src/: app_logger.rs  config.rs  main.rs  main_repo.rs  model.rs  nicovideo.rs  req_discord.rs  req_discord_post.rs  req_discord_status.rs  req_misskey.rs  req_nicovideo.rs  time.rs  vo.rs
src/tests/: config_test.rs  mod.rs  model_test.rs  time_test.rs
src/tests/config_test_cases/: chid_null.env  dryrun_false.env  dryrun_null.env  dryrun_true.env  keyword_null.env  token_null.env
