[package]
name = "niconico-watcher-rust"
version = "0.1.0"
authors = ["moko256"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = ["native_tls_backend"]
native_tls_backend = ["reqwest/native-tls", "serenity/native_tls_backend"]
rustls_backend = ["reqwest/rustls-tls", "serenity/rustls_backend"]


[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
cron = "0.9"
dotenv = "0.15"
log = { version = "0.4", features = ["max_level_info"]}
form_urlencoded = "1"
quick-xml = "0.22"

[dependencies.rss]
version = "2"
default-features = false

[dependencies.tokio]
version = "1"
default-features = false
features = [
    "macros",
    "rt",
    "time",
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["gzip"]

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "client",
    "http",
    "gateway",
    "model",
]
