[package]
name = "niconico-watcher-rust"
version = "0.1.0"
authors = ["moko256"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = ["native_tls_backend"]
native_tls_backend = ["reqwest/native-tls", "serenity/native_tls_backend"]
rustls_backend = ["reqwest/rustls-tls", "serenity/rustls_backend"]


[dependencies]
async-trait = "0.1"
cron = "0.15"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
serde_json = "1.0"
log = { version = "0.4", features = ["max_level_info"] }
form_urlencoded = "1"
quick-xml = "0.37"
moko256_systemd_stdio_logger = { git = "https://github.com/moko256/moko256_systemd_stdio_logger_rust.git", tag = "v1.0.1" }

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std", "serde"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["macros", "rt", "time"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["gzip", "json"]

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["client", "http", "gateway", "model"]

[lints.rust]
unsafe_code = "forbid"
future-incompatible = "forbid"
